<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ArmControlActivity">
    <item
        android:id="@+id/action_reconnect"
        android:title="@string/action_reconnect"
        android:icon="@drawable/ic_action_reconnect"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_stop"
        android:title="@string/action_stop"
        android:icon="@drawable/ic_stop"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        app:showAsAction="always" />
</menu>
